# aion

./: .aion.yaml  .gitignore  404.html  README.md  action.yml  cliff.toml  index.html  main.py  mkdocs.yml  pyproject.toml  repokeeper.yml  sitemap.xml
.github/: copilot-instructions.md
.github/prompts/: goal-driven.prompt.md
.github/workflows/: aion.yml  ci.yml  docs.yml  draft-release.yml  labeler.yml  publish.yml  release-drafter.yml  repokeeper-labeler.yml  repokeeper-patrol.yml  repokeeper-radar.yml  repokeeper.yml
aicodescan/: .aicodescan.yaml  .gitignore  README.md  main.py  pyproject.toml
aicodescan/aicodescan/: cli.py  context_extractor.py  llm_analyzer.py  models.py  risk_heuristics.py
aicodescan/tests/fixtures/: labels.json
aicodescan/tests/fixtures/safe/: 02_context.json  02_env_secret.py
aicodescan/tests/fixtures/vulnerable/: 01_context.json  01_raw_sqlite3.py
aicodescan/tests/unit/: test_cli.py  test_context_extractor.py  test_evaluation.py
configuration/: index.html
docs/: index.md  roadmap.md
docs/en/: configuration.md  how-it-works.md  index.md  installation.md  roadmap.md  usage.md
docs/javascripts/: language-switcher.js
docs/stylesheets/: extra.css  future.css
docs/zh/: configuration.md  how-it-works.md  index.md  installation.md  roadmap.md  usage.md
en/: index.html
en/configuration/: index.html
en/how-it-works/: index.html
en/installation/: index.html
en/usage/: index.html
how-it-works/: index.html
installation/: index.html
roadmap/: index.html
search/: search_index.json
src/aicodescan/: __init__.py  config.py
src/aion/: __init__.py  auto_update.py  cli.py  config.py  context_extractor.py  drift_detector.py  evaluation.py  explanations.py  inbox.py  knowledge_base.py  llm_analyzer.py  models.py  orchestrator.py  release_manager.py  repair.py  risk_heuristics.py  self_evolve.py  semgrep_runner.py  webhook.py
src/aion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stylesheets/: extra.css  future.css
tests/e2e/: test_e2e_scenarios.py
tests/eval/: test_quality_eval.py
tests/fixtures/: labels.json
tests/fixtures/safe/: 01_orm_correct.py  03_with_auth_decorator.py  05_context.json  05_safe_command.py  06_safe_eval.py  07_safe_subprocess.py  08_strong_cryptography.py
tests/fixtures/vulnerable/: 01_raw_sqlite3.py  02_hardcoded_secret.py  03_context.json  03_missing_auth_decorator.py  04_context.json  04_insecure_yaml_load.py  05_command_injection.py  05_context.json  06_eval_injection.py  07_subprocess_injection.py  08_weak_cryptography.py
tests/unit/: test_auto_update.py  test_cli.py  test_config.py  test_context_extractor.py  test_drift_detector.py  test_evaluation.py  test_explanations.py  test_fixtures.py  test_knowledge_base.py  test_llm_analyzer.py  test_release_manager.py  test_repair.py  test_risk_heuristics.py  test_self_evolve.py  test_semgrep_runner.py  test_webhook.py
usage/: index.html
zh/: index.html
zh/configuration/: index.html
zh/how-it-works/: index.html
zh/installation/: index.html
zh/roadmap/: index.html
zh/usage/: index.html
