[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-evolve"
dynamic = ["version"]
description = "AION: The Self-Evolving Code Engine. Code Once, Live Forever."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.86.0",
    "instructor>=1.14.5",
    "openai>=2.30.0",
    "pydantic>=2.11.0",
    "rich>=14.3.3",
    "semgrep>=1.156.0",
    "typer>=0.23.1",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8.0"]
all = ["google-generativeai>=0.8.0"]

[project.scripts]
aion = "aion.cli:app"

[project.urls]
Homepage = "https://github.com/shenxianpeng/aion"
Documentation = "https://shenxianpeng.github.io/aion/"
"Bug Tracker" = "https://github.com/shenxianpeng/aion/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.0",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "eval: live evaluation tests that may call external LLM APIs",
]
