[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm>=10.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-evolve"
dynamic = ["version"]
description = "AION: scan Python repositories and open verified security auto-fix pull requests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.111.0",
    "instructor>=1.15.3",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "semgrep>=1.167.0",
    "typer>=0.26.7",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8.6"]
all = ["google-generativeai>=0.8.6"]

[project.scripts]
aion = "aion.cli:app"

[project.urls]
Homepage = "https://github.com/shenxianpeng/aion"
Documentation = "https://shenxianpeng.github.io/aion/"
"Bug Tracker" = "https://github.com/shenxianpeng/aion/issues"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
docs = [
    "mkdocs-ng>=1.7.3",
    "mkdocs-ng-material>=9.7.7",
    "mkdocs-static-i18n>=1.3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "eval: live evaluation tests that may call external LLM APIs",
]
